Thu Nov 11 16:56:10 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file.rb (test_truncate_wbuf): we want to test
	  only File#truncate, not behavior of seek(2).

Thu Nov 11 01:52:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): use stringified object.
	  [ruby-dev:24768]

Wed Nov 10 22:49:01 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (SimpleDelegator::dup): wrong number of
	  arguments.

	* lib/delegate.rb (DelegateClass::dup): ditto.

Wed Nov 10 19:47:55 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): path is a string object now.

Wed Nov 10 12:31:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT (Example): extconf.rb is indispensable now.

Wed Nov 10 03:33:36 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix SEGV when compiled with Tcl/Tk8.3.x
	  or older

	* ext/tk/lib/tkextlib/tile/style.rb: bug fix

Tue Nov  9 22:24:07 2004  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf: original nkf.c rev:1.38

	* ext/nkf/nkf.c: fix bug: can't parse long-name options

	* ext/nkf/test.rb: fix bug: mime tests fail

Tue Nov  9 14:27:18 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Officious): moved from DefaultList.

Tue Nov  9 00:50:06 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb: Change version numbering of RDoc and ri

Tue Nov  9 01:05:04 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (rb_glob2): do not allocate buffer from heap to avoid
	  memory leaks.  use string object for buffering instead.
	  [ruby-dev:24738]

	* dir.c (join_path): ditto.

	* io.c (io_read): external input buffer may be modified even after
	  rb_str_locktmp().  [ruby-dev:24735]

	* dir.c (fnmatch): p or s may be NULL.  [ruby-dev:24749]

Tue Nov  9 00:36:26 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/extservm.rb: add DRb::ExtServManager#uri=.
	  [ruby-dev:24743]
