@@ -1,3 +1,8 @@
+Thu Nov 11 17:58:19 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* dir.c (rb_glob): should have called rb_glob_caller().
+	  [ruby-dev:24773]
+
 Thu Nov 11 16:56:10 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_file.rb (test_truncate_wbuf): we want to test
